[JS] To-Do List App

--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
         <main class="container">
             <section class="todo-app">
                 <h1>To-Do List <img src="img/icon.png" /></h1>
-                <span class="error-msg hidden">Error Message</span>
+                <span class="error-msg hidden"></span>
                 <section class="row">
                     <input
                         type="text"
                         id="input-box"
-                        placeholder="Add you text"
+                        placeholder="Saisissez votre tâche"
                     />
-                    <button>Add</button>
+                    <button>Ajouter</button>
                 </section>
                 <ul id="list-container">
-                    <li class="checked">Task 1</li>
-                    <li>Task 2</li>
-                    <li>Task 3</li>
                 </ul>
             </section>
         </main>
